--- a/trash codes/question_papers.html
+++ b/trash codes/question_papers.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Question Papers Page</title>
-	<link rel="stylesheet" type="text/css" href="course_structure.css">
+	<link rel="stylesheet" type="text/css" href="questn_paper.css">
 </head>
 
 <body>
