Update course structure page.html

--- a/trash codes/course structure page.html
+++ b/trash codes/course structure page.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Course Structure Page</title>
-	<link rel="stylesheet" type="text/css" href="course_structure.css">
+	<link rel="stylesheet" type="text/css" href="Course_structure.css">
 </head>
 
 <body>
