--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>JUCE</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="CSS.css">
+	<link rel="stylesheet" href="CSS code/CSS.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<style>
 		.mySlides {display:none}
@@ -12,7 +12,7 @@
 	</style>
 </head>
 
-<body style="width: 1250px;display: inline-block;vertical-align: middle;position: relative;margin:1px auto;">
+<body style="width: 1250px;display: inline-block;vertical-align: middle;position: relative;margin: 1px auto;">
 	<header class="header">       <!--HEADER-->
 
 		<div id="logo">
